--- a/App/app/src/main/res/menu/view_order.xml
+++ b/App/app/src/main/res/menu/view_order.xml
@@ -2,9 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/view_order_create_order"
+        android:orderInCategory="100"
+        android:title="@string/view_order_add"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/view_order_action_search"
         android:icon="@android:drawable/ic_menu_search"
-        android:title="Search"
+        android:title="@string/view_order_search"
         app:actionViewClass="android.support.v7.widget.SearchView"
         app:showAsAction="always|collapseActionView" />
 </menu>
