--- a/App/app/src/main/res/layout/nav_header_main_screen.xml
+++ b/App/app/src/main/res/layout/nav_header_main_screen.xml
@@ -34,6 +34,7 @@
         android:text="@string/nav_header_subtitle" />
 
     <Button
+        android:id="@+id/nav_header_close_session"
         style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
