--- a/App/app/src/main/res/layout/fragment_view_orders_list.xml
+++ b/App/app/src/main/res/layout/fragment_view_orders_list.xml
@@ -9,6 +9,6 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ViewOrdersFragment"
+    tools:context=".Orders.ViewOrdersFragment"
     tools:listitem="@layout/fragment_view_orders" >
 </android.support.v7.widget.RecyclerView>
