--- a/App/app/src/main/res/layout/fragment_ambient.xml
+++ b/App/app/src/main/res/layout/fragment_ambient.xml
@@ -98,27 +98,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ambient_fragment_humidity" />
 
-    <EditText
+
+    <SeekBar
         android:id="@+id/ambient_fragment_optim_temp_edit"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:ems="10"
-        android:inputType="number"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:min="15"
+        android:max="30"
+        android:progress="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView24" />
+
+    <TextView
+        android:id="@+id/create_fragment_show_temp"
+        android:layout_width="wrap_content"
+        android:layout_height="14dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:text="Temperatura: 15°C"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/ambient_fragment_optim_temp_edit" />
 
     <Button
         android:id="@+id/create_fragment_accept_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
         android:text="@string/ambient_fragment_accept_btn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ambient_fragment_optim_temp_edit" />
+        app:layout_constraintTop_toBottomOf="@+id/create_fragment_show_temp" />
+
+
 </android.support.constraint.ConstraintLayout>
