--- a/App/app/src/main/res/layout/fragment_ambient.xml
+++ b/App/app/src/main/res/layout/fragment_ambient.xml
@@ -60,7 +60,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView18" />
 
     <TextView
-        android:id="@+id/create_fragment_temperature"
+        android:id="@+id/ambient_fragment_temperature"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -104,10 +104,10 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        style="@style/Widget.AppCompat.SeekBar.Discrete"
-        android:min="15"
         android:max="30"
+        android:min="15"
         android:progress="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -118,7 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="14dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
         android:text="Temperatura: 15°C"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,11 +132,14 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/ambient_fragment_accept_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/create_fragment_show_temp" />
+        app:layout_constraintTop_toBottomOf="@+id/create_fragment_show_temp"
+        app:layout_constraintVertical_bias="0.060000002" />
 
 
 </android.support.constraint.ConstraintLayout>
