--- a/App/app/src/main/res/layout/fragment_product_list.xml
+++ b/App/app/src/main/res/layout/fragment_product_list.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/list"
-    android:name="com.tecneu.tecneu.ProductFragment"
+    android:name="com.tecneu.tecneu.Products.ProductFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context=".ProductFragment"
+    tools:context=".Products.ProductFragment"
     tools:listitem="@layout/fragment_product" />
