--- a/App/app/src/main/res/layout/fragment_create_order.xml
+++ b/App/app/src/main/res/layout/fragment_create_order.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
+            android:enabled="false"
             android:hint="@string/fragment_create_order_provider_search"
             android:inputType="textPersonName" />
 
@@ -34,6 +35,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:enabled="false"
             android:id="@+id/fragment_create_order_product_search"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -85,6 +87,7 @@
     </ListView>
 
     <Button
+        android:id="@+id/fragment_create_order_create_order"
         android:text="@string/fragment_create_order_order_create_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
