--- a/App/app/src/main/res/layout/fragment_order.xml
+++ b/App/app/src/main/res/layout/fragment_order.xml
@@ -20,6 +20,10 @@
         android:layout_width="match_parent"
         android:text="total"
         android:layout_height="wrap_content" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 
     <ListView
         android:id="@+id/order_fragment_list"
