--- a/App/app/src/main/res/layout/fragment_order_item.xml
+++ b/App/app/src/main/res/layout/fragment_order_item.xml
@@ -20,4 +20,9 @@
         android:id="@+id/fragment_order_item_price"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray"/>
 </LinearLayout>
